[Feat] Product detail rework

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "pagina-essen",
-    "version": "0.1.0",
+    "name": "recetas-con-essen",
+    "version": "1.0.0",
     "private": true,
     "scripts": {
         "dev": "next dev --turbopack --port 3008",
