--- a/package.json
+++ b/package.json
@@ -1,27 +1,39 @@
 {
-    "name": "recetas-con-essen",
-    "version": "1.0.0",
-    "private": true,
-    "scripts": {
-        "dev": "next dev --turbopack --port 3008",
-        "build": "next build --turbopack",
-        "start": "next start --port 3008"
-    },
-    "dependencies": {
-        "@fortawesome/fontawesome-svg-core": "^7.0.1",
-        "@fortawesome/free-brands-svg-icons": "^7.0.1",
-        "@fortawesome/free-regular-svg-icons": "^7.0.1",
-        "@fortawesome/free-solid-svg-icons": "^7.0.1",
-        "@fortawesome/react-fontawesome": "^3.0.2",
-        "@next/third-parties": "^15.5.6",
-        "next": "15.5.4",
-        "react": "19.1.0",
-        "react-dom": "19.1.0"
-    },
-    "devDependencies": {
-        "@types/node": "^20",
-        "@types/react": "^19",
-        "@types/react-dom": "^19",
-        "typescript": "^5"
-    }
+  "name": "recetas-con-essen",
+  "version": "1.0.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev --turbopack --port 3008",
+    "build": "next build --turbopack",
+    "start": "next start --port 3008",
+    "lint": "eslint .",
+    "type-check": "tsc --noEmit",
+    "prepare": "husky"
+  },
+  "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^7.0.1",
+    "@fortawesome/free-brands-svg-icons": "^7.0.1",
+    "@fortawesome/free-regular-svg-icons": "^7.0.1",
+    "@fortawesome/free-solid-svg-icons": "^7.0.1",
+    "@fortawesome/react-fontawesome": "^3.0.2",
+    "@next/third-parties": "^15.5.6",
+    "next": "15.5.4",
+    "react": "19.1.0",
+    "react-dom": "19.1.0"
+  },
+  "devDependencies": {
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^15.5.9",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.7",
+    "typescript": "^5"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint"
+    ]
+  }
 }
